# Application/Items/Dtos.cs
@@ -1,5 +1,7 @@
 ﻿namespace BlazorApp1.Application.Items;
 
-public record ItemDto(string Id, string Name, string Description, DateTime Created, string CreatedBy, DateTime? LastModified, string? LastModifiedBy);
+public record ItemDto(string Id, string Name, string Description, StatusDto Status, DateTime Created, string CreatedBy, DateTime? LastModified, string? LastModifiedBy);
+
+public record StatusDto(int Id, string Name);
 
 public record PagedResult<T>(IEnumerable<T> Items, int Page, int TotalCount);
