# ClientApp/OpenAPIs/swagger.json
@@ -11,6 +11,39 @@
     }
   ],
   "paths": {
+    "/_configuration/{clientId}": {
+      "get": {
+        "tags": [
+          "OidcConfiguration"
+        ],
+        "operationId": "OidcConfiguration_GetClientRequestParameters",
+        "parameters": [
+          {
+            "name": "clientId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/WeatherForecast": {
       "get": {
         "tags": [
@@ -244,12 +277,54 @@
         ]
       }
     },
+    "/api/Items/{id}/Status": {
+      "put": {
+        "tags": [
+          "Items"
+        ],
+        "operationId": "Items_UpdateStatus",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 1
+          }
+        ],
+        "requestBody": {
+          "x-name": "value",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateItemStatusDto"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 2
+        },
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
+      }
+    },
     "/api/Items/{id}/Description": {
       "put": {
         "tags": [
           "Items"
         ],
-        "operationId": "Items_UpdateItemDescription",
+        "operationId": "Items_UpdateDescription",
         "parameters": [
           {
             "name": "id",
@@ -286,37 +361,52 @@
         ]
       }
     },
-    "/_configuration/{clientId}": {
+    "/api/Statuses": {
       "get": {
         "tags": [
-          "OidcConfiguration"
+          "Statuses"
         ],
-        "operationId": "OidcConfiguration_GetClientRequestParameters",
-        "parameters": [
-          {
-            "name": "clientId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "nullable": true
-            },
-            "x-position": 1
-          }
-        ],
+        "operationId": "Statuses_GetStatuses",
         "responses": {
           "200": {
             "description": "",
             "content": {
-              "application/octet-stream": {
+              "application/json": {
                 "schema": {
-                  "type": "string",
-                  "format": "binary"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/StatusDto"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
                 }
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ]
       }
     }
   },
@@ -377,6 +467,9 @@
           "description": {
             "type": "string"
           },
+          "status": {
+            "$ref": "#/components/schemas/StatusDto"
+          },
           "created": {
             "type": "string",
             "format": "date-time"
@@ -392,6 +485,19 @@
           "lastModifiedBy": {
             "type": "string",
             "nullable": true
+          }
+        }
+      },
+      "StatusDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string"
           }
         }
       },
@@ -445,6 +551,16 @@
           },
           "description": {
             "type": "string"
+          }
+        }
+      },
+      "UpdateItemStatusDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "statusId": {
+            "type": "integer",
+            "format": "int32"
           }
         }
       },
