# Infrastructure/Persistence/Configurations/StatusConfiguration.cs
@@ -1,0 +1,17 @@
+using Microsoft.EntityFrameworkCore;
+using Microsoft.EntityFrameworkCore.Metadata.Builders;
+using BlazorApp1.Domain;
+
+namespace BlazorApp1.Infrastructure.Persistence.Configurations;
+
+public class StatusConfiguration : IEntityTypeConfiguration<Status>
+{
+    public void Configure(EntityTypeBuilder<Status> builder)
+    {
+        builder.ToTable("Statuses");
+
+        builder.HasMany(e => e.Items).WithOne(e => e.Status).OnDelete(DeleteBehavior.NoAction);
+
+        builder.Ignore(i => i.DomainEvents);
+    }
+}
